--- a/index.html
+++ b/index.html
@@ -1,15 +1,231 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr. Spill - Coming Soon</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Main Coming Soon Page -->
+    <div id="main-page" class="page">
+        <div class="container">
+            <!-- Heart Monitor Background -->
+            <div class="heart-monitor">
+                <svg id="ecg-svg" preserveAspectRatio="none">
+                    <!-- Grid patterns -->
+                    <defs>
+                        <pattern id="grid" width="20" height="20" patternUnits="userSpaceOnUse">
+                            <path d="M 20 0 L 0 0 0 20" fill="none" stroke="rgba(20, 184, 166, 0.1)" stroke-width="0.5"/>
+                        </pattern>
+                        <pattern id="grid-major" width="100" height="100" patternUnits="userSpaceOnUse">
+                            <rect width="100" height="100" fill="url(#grid)"/>
+                            <path d="M 100 0 L 0 0 0 100" fill="none" stroke="rgba(20, 184, 166, 0.2)" stroke-width="1"/>
+                        </pattern>
+                    </defs>
+                    <rect width="100%" height="100%" fill="url(#grid-major)"/>
+                </svg>
+                
+                <!-- Monitor HUD -->
+                <div class="monitor-hud top-left">
+                    <div>HR: 72 bpm</div>
+                    <div>Dr. Spill Monitor</div>
+                </div>
+                <div class="monitor-hud top-right">
+                    <div>BP: 120/80</div>
+                    <div>Active</div>
+                </div>
+                <div class="monitor-hud top-center">
+                    <div class="pulse-dot"></div>
+                    <span>MONITORING</span>
+                </div>
+            </div>
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Coming Soon Website Design</title>
-    </head>
+            <!-- Animated background blobs -->
+            <div class="blob blob-teal"></div>
+            <div class="blob blob-red"></div>
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+            <!-- Main Content -->
+            <div class="content">
+                <!-- Logo Section -->
+                <div class="logo-section fade-in">
+                    <div class="rotating-logo">
+                        <img src="logo.png" alt="Dr. Spill Logo" id="logo-image">
+                    </div>
+                    <h1 class="main-title fade-in-delay-1">Dr. Spill</h1>
+                    <p class="subtitle fade-in-delay-2">Coming Soon</p>
+                </div>
+
+                <!-- Prescription Form -->
+                <div class="prescription-form fade-in-delay-3">
+                    <div class="prescription-pad">
+                        <!-- Header -->
+                        <div class="prescription-header">
+                            <div>
+                                <h3 class="prescription-title">Dr. Spill</h3>
+                                <p class="prescription-subtitle">Coming Soon</p>
+                            </div>
+                            <div class="prescription-date">
+                                <p>License: #SP1LL2026</p>
+                                <p>Date: <span id="current-date"></span></p>
+                            </div>
+                        </div>
+
+                        <!-- Rx Symbol -->
+                        <div class="rx-section">
+                            <div class="rx-symbol">℞</div>
+                            <div class="rx-text">Prescription for Updates</div>
+                        </div>
+
+                        <!-- Form -->
+                        <form id="signup-form">
+                            <div class="form-group">
+                                <label>Patient Name</label>
+                                <input type="text" id="name-input" placeholder="Enter your name" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Email Address</label>
+                                <input type="email" id="email-input" placeholder="your.email@example.com" required>
+                            </div>
+
+                            <button type="submit" class="submit-btn" id="submit-btn">
+                                Get Notified When We Launch
+                            </button>
+
+                            <div id="error-message" class="error-message"></div>
+                        </form>
+
+                        <!-- Signature -->
+                        <div class="prescription-signature">
+                            <div class="signature-name">Dr. Spill</div>
+                            <div class="signature-label">Authorized Signature</div>
+                        </div>
+
+                        <!-- Prescription holes -->
+                        <div class="prescription-holes">
+                            <div class="hole"></div>
+                            <div class="hole"></div>
+                            <div class="hole"></div>
+                        </div>
+
+                        <!-- Success overlay -->
+                        <div id="success-overlay" class="success-overlay">
+                            <div class="success-content">
+                                <div class="success-icon">✓</div>
+                                <p class="success-title">You're on the list!</p>
+                                <p class="success-subtitle">We'll notify you when we launch.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Footer -->
+                <div class="footer fade-in-delay-4">
+                    <p>© 2026 Dr. Spill. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Login Page -->
+    <div id="admin-login-page" class="page" style="display: none;">
+        <div class="admin-container">
+            <button class="back-btn" id="back-from-login">
+                <span>←</span> Back to Site
+            </button>
+
+            <div class="admin-card">
+                <div class="admin-header">
+                    <div class="lock-icon">🔒</div>
+                    <h2>Admin Access</h2>
+                    <p>Enter password to view dashboard</p>
+                </div>
+
+                <form id="admin-login-form">
+                    <input type="password" id="admin-password" placeholder="Enter admin password" autocomplete="off">
+                    <div id="login-error" class="error-message"></div>
+                    <button type="submit" class="admin-btn">Access Dashboard</button>
+                </form>
+
+                <div class="admin-footer">
+                    <p>Dr. Spill Admin Panel</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Dashboard Page -->
+    <div id="admin-dashboard-page" class="page" style="display: none;">
+        <div class="dashboard-container">
+            <button class="back-btn" id="back-from-dashboard">
+                <span>←</span> Back to Site
+            </button>
+
+            <div class="dashboard-header">
+                <div>
+                    <h1>Admin Dashboard</h1>
+                    <p>Dr. Spill - Signup Management</p>
+                </div>
+                <button class="refresh-btn" id="refresh-btn">
+                    <span id="refresh-icon">⟳</span> Refresh
+                </button>
+            </div>
+
+            <!-- Stats Cards -->
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <span>Total Signups</span>
+                        <span class="stat-icon">👥</span>
+                    </div>
+                    <div class="stat-value" id="total-signups">0</div>
+                </div>
+
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <span>Latest Signup</span>
+                        <span class="stat-icon">📧</span>
+                    </div>
+                    <div class="stat-value-small" id="latest-signup">No signups yet</div>
+                </div>
+            </div>
+
+            <!-- Signups Table -->
+            <div class="table-card">
+                <h3>All Signups</h3>
+                <div id="dashboard-error" class="error-message"></div>
+                <div id="loading-state" class="loading-state">
+                    <div class="spinner"></div>
+                    <p>Loading signups...</p>
+                </div>
+                <div id="empty-state" class="empty-state" style="display: none;">
+                    <div class="empty-icon">📧</div>
+                    <p>No signups yet. Share your coming soon page!</p>
+                </div>
+                <div id="signups-table-container" style="display: none;">
+                    <table id="signups-table">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <tbody id="signups-tbody">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <!-- Export Button -->
+            <div class="export-section" id="export-section" style="display: none;">
+                <button class="export-btn" id="export-btn">Export to CSV</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
