--- a/index.html
+++ b/index.html
@@ -98,8 +98,15 @@
 
                         <!-- Signature -->
                         <div class="prescription-signature">
-                            <div class="signature-name">Dr. Spill</div>
-                            <div class="signature-label">Authorized Signature</div>
+                            <svg class="instagram-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect x="2" y="2" width="20" height="20" rx="5" stroke="currentColor" stroke-width="2"/>
+                                <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="2"/>
+                                <circle cx="18" cy="6" r="1.5" fill="currentColor"/>
+                            </svg>
+                            <div>
+                                <div class="signature-name">Dr. Spill</div>
+                                <div class="signature-label">Authorized Signature</div>
+                            </div>
                         </div>
 
                         <!-- Prescription holes -->
