--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
                         <!-- Header -->
                         <div class="prescription-header">
                             <div>
-                                <h3 class="prescription-title">Dr. Spill</h3>
-                                <p class="prescription-subtitle">Coming Soon</p>
                             </div>
                             <div class="prescription-date">
                                 <p>License: #SP1LL2026</p>
@@ -98,11 +96,13 @@
 
                         <!-- Signature -->
                         <div class="prescription-signature">
+                            <a href="http://instagram.com/ladieslovethedoctor/" target="_blank" title="Instagram">
                             <svg class="instagram-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect x="2" y="2" width="20" height="20" rx="5" stroke="currentColor" stroke-width="2"/>
                                 <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="2"/>
                                 <circle cx="18" cy="6" r="1.5" fill="currentColor"/>
                             </svg>
+                            </a>
                             <div>
                                 <div class="signature-name">Dr. Spill</div>
                                 <div class="signature-label">Authorized Signature</div>
