--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                         <!-- Header -->
                         <div class="prescription-header">
                             <div>
+                                <h3 class="prescription-title">Dr. Spill</h3>
+                                <p class="prescription-subtitle">Coming Soon</p>
                             </div>
                             <div class="prescription-date">
                                 <p>License: #SP1LL2026</p>
